crates/rome_cli/tests/snapshots/main::ci/ci_ok.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `ci.js`

```js
statement();

```

# Emitted Messages


