crates/rome_cli/tests/snapshots/main::ci/formatting_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 145
expression: content
---
## `ci.js`

```js
  statement(  )  
```

# Emitted Messages

```block
ci.js: error[CI]: File content differs from formatting output
    | @@ -1 +1 @@
0   | -   statement(  )
  0 | + statement();

```


